--- a/.github/workflows/update_feeds.yaml
+++ b/.github/workflows/update_feeds.yaml
@@ -12,6 +12,8 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
+      with:
+        persist-credentials: false
 
     - name: Set up Node.js
       uses: actions/setup-node@v2
@@ -33,11 +35,12 @@ jobs:
         cp rss-reader/feeds.json public/feeds.json
 
     - name: Commit and push if there are changes
+      env:
+        GITHUB_TOKEN: ${{ secrets.GH_PAT }}
       run: |
         git config --global user.name 'github-actions[bot]'
         git config --global user.email 'github-actions[bot]@users.noreply.github.com'
         git add public/feeds.json
-        git diff-index --quiet HEAD || git commit -m 'Update feeds.json'
-        git push
-      env:
-        GITHUB_TOKEN: ${{ secrets.GH_PAT }}
+        git diff --quiet || git commit -m 'Update feeds.json'
+        git remote set-url origin https://elky84:${{ secrets.GH_PAT }}@github.com/elky84/tech_curation.git
+        git push origin HEAD:main
