--- a/.github/workflows/update_feeds.yaml
+++ b/.github/workflows/update_feeds.yaml
@@ -34,13 +34,16 @@ jobs:
       run: |
         cp rss-reader/feeds.json public/feeds.json
 
+    - name: Set up Git
+      run: |
+        git config --global user.name 'github-actions[bot]'
+        git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+
     - name: Commit and push if there are changes
       env:
         GITHUB_TOKEN: ${{ secrets.GH_PAT }}
       run: |
-        git config --global user.name 'github-actions[bot]'
-        git config --global user.email 'github-actions[bot]@users.noreply.github.com'
         git add public/feeds.json
-        git diff --quiet || git commit -m 'Update feeds.json'
+        git commit -m 'Update feeds.json' || echo "No changes to commit"
         git remote set-url origin https://elky84:${{ secrets.GH_PAT }}@github.com/elky84/tech_curation.git
         git push origin HEAD:main
