--- a/.github/workflows/update_feeds.yaml
+++ b/.github/workflows/update_feeds.yaml
@@ -30,9 +30,10 @@ jobs:
         cd rss-reader
         node index.js
 
-    - name: Copy feeds.json to public folder
+    - name: Copy json files to public folder
       run: |
         cp rss-reader/feeds.json public/feeds.json
+        cp rss-reader/articles.json public/articles.json
 
     - name: Set up Git
       run: |
@@ -44,6 +45,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GH_PAT }}
       run: |
         git add public/feeds.json
-        git commit -m 'Update feeds.json' || echo "No changes to commit"
+        git add public/articles.json
+        git commit -m 'Update feeds.json, articles.json' || echo "No changes to commit"
         git remote set-url origin https://elky84:${{ secrets.GH_PAT }}@github.com/elky84/tech_curation.git
         git push origin HEAD:main
